# dqn-agent

./: .gitignore  Dockerfile  Dockerfile.amd  Dockerfile.nvidia  Dockerfile.tensorboard  README.md  agent.py  cardgame.py  docker-compose.yaml  docker_requirements.txt  dqn_agent.py  env.py  main.py  multi_agent.py  par_env.py  par_test.py  par_train.py  pyproject.toml  q_agent.py  qagent.py  requirements.txt  results  test.py  train.py
sb3/: agent.py  env.py  train.py
src/: adapter.py  agent_utils.py  config.py  dqn_agent.py  durak.py  durak_env.py  env.py  interpolation_agent.py  low_card_agent.py  main.py  player_adapter.py  q_agent.py  random_agent.py  self_play.py  test.py  train.py  trump_fish_agent.py
