[project]
name = "dqn-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.0"
dependencies = [
    "debugpy",
    "dm-tree",
    "gputil",
    "gymnasium",
    "lz4",
    "matplotlib",
    "msgpack",
    "numpy",
    "opencv-python",
    "pettingzoo",
    "prettytable",
    "ray[rllib,tune]",
    "scipy",
    "tensorboard",
    "tqdm",
]
